	PR python/14386: 	* varobj.c (update_dynamic_varobj_children): Don't call 	PyIter_Check. gdb/testsuite 	* gdb.python/py-mi.exp: Add test for printer whose children 	are a list. 	* gdb.python/py-prettyprint.c (struct children_as_list): New. 	(main): New variable children_as_list. 	* gdb.python/py-prettyprint.py (class pp_children_as_list): 	New. 	(register_pretty_printers): Register new printer.